--- a/css/tilda-blocks-2.12.css
+++ b/css/tilda-blocks-2.12.css
@@ -3,6 +3,23 @@
   font-family: Customfont !important;
 }
 
+.main-form-button {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.main-form-button:hover {
+  opacity: 0.5;
+}
+
+.main-form {
+  background-color: #8DDCFF;
+}
+
+.main-form::placeholder {
+  color: #0D2E52;
+}
+
 #allrecords {
   -webkit-font-smoothing: antialiased;
   background-color: none
